Decisions can be reinitialized and updated (but not written to disk)