@@ -18,50 +18,62 @@ public abstract class ARepo implements IRepo {
 
     @Override
     public void updateContext(String context, String id) {
-        yStatements.stream().filter(yStatement -> id.equals(yStatement.getId())).collect(Collectors
-                .toList()).forEach(yStatement -> yStatement.setContext(context));
+        YStatementJustificationWrapper wrapper = getYStatementJustificationWrapperForID(id);
+        wrapper.setContext(context);
+        updateDecision(wrapper);
     }
 
     @Override
     public void updateFacing(String facing, String id) {
-        yStatements.stream().filter(yStatement -> id.equals(yStatement.getId())).collect(Collectors
-                .toList()).forEach(yStatement -> yStatement.setFacing(facing));
+        YStatementJustificationWrapper wrapper = getYStatementJustificationWrapperForID(id);
+        wrapper.setFacing(facing);
+        updateDecision(wrapper);
     }
 
     @Override
     public void updateChosen(String chosen, String id) {
-        yStatements.stream().filter(yStatement -> id.equals(yStatement.getId())).collect(Collectors
-                .toList()).forEach(yStatement -> yStatement.setChosen(chosen));
+        YStatementJustificationWrapper wrapper = getYStatementJustificationWrapperForID(id);
+        wrapper.setChosen(chosen);
+        updateDecision(wrapper);
     }
 
     @Override
     public void updateNeglected(String neglected, String id) {
-        yStatements.stream().filter(yStatement -> id.equals(yStatement.getId())).collect(Collectors
-                .toList()).forEach(yStatement -> yStatement.setNeglected(neglected));
+        YStatementJustificationWrapper wrapper = getYStatementJustificationWrapperForID(id);
+        wrapper.setNeglected(neglected);
+        updateDecision(wrapper);
     }
 
     @Override
     public void updateAchieving(String achieving, String id) {
-        yStatements.stream().filter(yStatement -> id.equals(yStatement.getId())).collect(Collectors
-                .toList()).forEach(yStatement -> yStatement.setAchieving(achieving));
+        YStatementJustificationWrapper wrapper = getYStatementJustificationWrapperForID(id);
+        wrapper.setAchieving(achieving);
+        updateDecision(wrapper);
     }
 
     @Override
     public void updateAccepting(String accepting, String id) {
-        yStatements.stream().filter(yStatement -> id.equals(yStatement.getId())).collect(Collectors
-                .toList()).forEach(yStatement -> yStatement.setAccepting(accepting));
+        YStatementJustificationWrapper wrapper = getYStatementJustificationWrapperForID(id);
+        wrapper.setAccepting(accepting);
+        updateDecision(wrapper);
     }
 
     @Override
     public void updateMoreInformation(String moreInformation, String id) {
-        yStatements.stream().filter(yStatement -> id.equals(yStatement.getId())).collect(Collectors
-                .toList()).forEach(yStatement -> yStatement.setMoreInformation(moreInformation));
+        YStatementJustificationWrapper wrapper = getYStatementJustificationWrapperForID(id);
+        wrapper.setMoreInformation(moreInformation);
+        updateDecision(wrapper);
+    }
+
+    private YStatementJustificationWrapper getYStatementJustificationWrapperForID(String id) {
+        return yStatements.stream().filter(y -> id.equals(y.getId())
+        ).collect(Collectors.toList()).get(0);
     }
 
     @Override
-    public void updateDecision(YStatementJustificationWrapper decision, String id) {
-        yStatements.stream().filter(yStatement -> id.equals(yStatement.getId())).collect(Collectors
-                .toList()).forEach(yStatement -> yStatement = decision);
+    public void updateDecision(YStatementJustificationWrapper decision) {
+        yStatements.removeIf(y -> decision.getId().equals(y.getId()));
+        yStatements.add(decision);
     }
 
     @Override
